[gd_scene load_steps=9 format=2]

[ext_resource path="res://Goal.tscn" type="PackedScene" id=1]
[ext_resource path="res://Structures/Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Structures/Wall.tscn" type="PackedScene" id=4]
[ext_resource path="res://Powerups/verticalPU.tscn" type="PackedScene" id=5]
[ext_resource path="res://Powerups/DoubleJumpPu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Powerups/HorizontalPU.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/Level4.gd" type="Script" id=8]

[node name="Level4" type="Spatial"]
script = ExtResource( 8 )

[node name="Floor" parent="." instance=ExtResource( 2 )]

[node name="Goal" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 10.61, 12.7881, 1.40495 )

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 4.88403, 14.1428 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
light_energy = 0.5

[node name="DirectionalLight2" type="DirectionalLight" parent="."]
light_energy = 0.5

[node name="DirectionalLight3" type="DirectionalLight" parent="."]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0, 0 )
light_energy = 0.5

[node name="DirectionalLight4" type="DirectionalLight" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 1.37093, 0 )
light_energy = 0.5

[node name="Wall" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.14203, 1.32563, 0 )

[node name="Wall2" parent="." instance=ExtResource( 4 )]
transform = Transform( 5, 0, 0, 0, 10, 0, 0, 0, 5, 9.87584, 1.63552, 0.993412 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.98418, 0.177171, 0, -0.177171, 0.98418, 0, 20.6227, 32.8771 )

[node name="DoubleJumpPu" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.81175, 3.22753, -0.318833 )

[node name="HorizontalPU" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.38769, 2.32164, 5.73321 )

[node name="verticalPU" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.54019, 1.94823, 4.49702 )
